--- a/S_Learner.ipynb
+++ b/S_Learner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "08b8c823",
+   "id": "2bb2fb74",
    "metadata": {},
    "source": [
     "# What is the S-Learner?\n",
@@ -13,7 +13,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acf1d12b",
+   "id": "53a0ba24",
+   "metadata": {},
+   "source": [
+    "# Step-by-Step Approach Using Meta Learners\n",
+    "\n",
+    "## Step 1: Collect Historical Data\n",
+    "Gather data on customers' credit limits, spending, default behavior, and churn.\n",
+    "\n",
+    "### Include features like:\n",
+    "- **Credit score**\n",
+    "- **Income**\n",
+    "- **Current limit**\n",
+    "- **Spending habits**\n",
+    "- **Churn indicator**\n",
+    "- **Default history**\n",
+    "- **Limit increase indicator** (Did the customer receive a credit limit increase before?)\n",
+    "\n",
+    "## Step 2: Define Treatment & Outcome Variables\n",
+    "- **Treatment (T):** Whether the customer received a credit limit increase (1 = Yes, 0 = No).\n",
+    "- **Outcome (Y):** The spending increase or churn/default probability change.\n",
+    "\n",
+    "## Step 3: Train a Meta Learner (e.g., S-Learner)\n",
+    "1. Train a **Gradient Boosting Regressor** or **LGBMRegressor** using all features, including `T`.\n",
+    "2. Make predictions under two scenarios:\n",
+    "   - **T = 1:** Predict customer behavior if they got a credit limit increase.\n",
+    "   - **T = 0:** Predict behavior if they didn’t get a credit limit increase.\n",
+    "3. Compute **Conditional Average Treatment Effect (CATE)**:\n",
+    "\n",
+    "   \\[\n",
+    "   CATE = Y_{T=1} - Y_{T=0}\n",
+    "   \\]\n",
+    "\n",
+    "   - If **CATE > 0**, the credit limit increase positively impacts customer spending.\n",
+    "   - If **CATE < 0**, increasing the credit limit doesn't help or increases risk.\n",
+    "\n",
+    "## Step 4: Identify \"Good Candidates\" for Limit Increase\n",
+    "Select customers based on the following criteria:\n",
+    "- **Customers who increase spending significantly** (CATE > threshold).\n",
+    "- **Customers who have low default risk.**\n",
+    "- **Customers who are at risk of churn** if they don’t receive a limit increase.\n",
+    "\n",
+    "## Step 5: Make Final Decision\n",
+    "Approve limit increases only for customers who:\n",
+    "- Increase spend enough to justify risk.\n",
+    "- Are unlikely to default.\n",
+    "- Are likely to churn if not given an increase.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac27f60a",
    "metadata": {},
    "source": [
     "# Step 1: Load Required Libraries and Generate Data"
@@ -21,17 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "18bcccd6",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -139,7 +182,7 @@
        "4               0       5611.755657  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "c44f1df5",
    "metadata": {},
    "outputs": [],
@@ -199,8 +242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "dfacdf11",
+   "execution_count": 28,
+   "id": "98939a65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73108bd5",
+   "id": "88d54006",
    "metadata": {},
    "source": [
     "# Step 1: Train the S-Learner Model\n",
@@ -228,30 +271,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "331587fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingRegressor(random_state=42)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train S-Learner Model\n",
     "s_learner = GradientBoostingRegressor(n_estimators=100, max_depth=3, random_state=42)\n",
-    "s_learner.fit(np.column_stack([X_train, T_train]), y_train)\n",
     "\n",
-    "# Concatenate treatment variable (increase_limit) as a feature\n",
-    "X_train_s = np.column_stack((X_train_scaled, T_train))\n",
-    "X_test_s = np.column_stack((X_test_scaled, T_test))\n",
-    "\n",
-    "# Train the model\n",
-    "s_learner.fit(X_train_s, Y_train)\n",
-    "\n",
-    "# Make predictions\n",
-    "Y_pred_train = s_learner.predict(X_train_s)\n",
-    "Y_pred_test = s_learner.predict(X_test_s)\n"
+    "# Train the model on all features, including treatment T\n",
+    "s_learner.fit(pd.concat([X_train, T_train], axis=1), Y_train)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "090d6b68",
+   "id": "bf8dc9cb",
    "metadata": {},
    "source": [
     "# Step 2: Estimate Counterfactual Outcomes\n",
@@ -264,25 +309,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "19a7f40d",
+   "execution_count": 30,
+   "id": "b1362533",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Z009YJJ/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py:493: FutureWarning: The feature names should match those that were passed during fit. Starting version 1.2, an error will be raised.\n",
+      "Feature names unseen at fit time:\n",
+      "- T\n",
+      "Feature names seen at fit time, yet now missing:\n",
+      "- increase_limit\n",
+      "\n",
+      "  warnings.warn(message, FutureWarning)\n",
+      "/Users/Z009YJJ/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py:493: FutureWarning: The feature names should match those that were passed during fit. Starting version 1.2, an error will be raised.\n",
+      "Feature names unseen at fit time:\n",
+      "- T\n",
+      "Feature names seen at fit time, yet now missing:\n",
+      "- increase_limit\n",
+      "\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Predict potential outcomes under both treatment conditions\n",
-    "X_test_T1 = np.column_stack((X_test_scaled, np.ones(len(X_test_scaled))))  # Limit increase = 1\n",
-    "X_test_T0 = np.column_stack((X_test_scaled, np.zeros(len(X_test_scaled)))) # No limit increase = 0\n",
+    "# Predict Y if customer was treated (T=1)\n",
+    "X_test_T1 = pd.concat([X_test, pd.Series(1, index=X_test.index, name='T')], axis=1)\n",
+    "preds_T1 = s_learner.predict(X_test_T1)\n",
     "\n",
-    "preds_T1 = s_learner.predict(X_test_T1)  # Predicted spend if limit was increased\n",
-    "preds_T0 = s_learner.predict(X_test_T0)  # Predicted spend if limit was NOT increased\n",
+    "# Predict Y if customer was NOT treated (T=0)\n",
+    "X_test_T0 = pd.concat([X_test, pd.Series(0, index=X_test.index, name='T')], axis=1)\n",
+    "preds_T0 = s_learner.predict(X_test_T0)\n",
     "\n",
-    "# Compute CATE (difference between treatment and no-treatment predictions)\n",
+    "# Compute CATE\n",
     "CATE = preds_T1 - preds_T0\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa896ea5",
+   "id": "47e066fa",
+   "metadata": {},
+   "source": [
+    "- preds_T1: Predicted spending if given a limit increase.\n",
+    "- preds_T0: Predicted spending if NOT given a limit increase.\n",
+    "- CATE = Predicted impact of the limit increase on spending."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27c2268a",
    "metadata": {},
    "source": [
     "# Step 3: Analyze & Visualize the Impact\n",
@@ -294,8 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f6a18be3",
+   "execution_count": 31,
+   "id": "077592ac",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +405,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77736099",
+   "id": "925edac2",
+   "metadata": {},
+   "source": [
+    "## What This Graph Tells Us\n",
+    "- The blue bars show the distribution of predicted spending increases.\n",
+    "- The red dashed line marks the average impact.\n",
+    "- Customers above the average CATE are strong candidates for a limit increase."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "120adcba",
    "metadata": {},
    "source": [
     "# Step 4: Identify \"Good Candidates\" for Limit Increase\n",
@@ -342,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "2551d1fa",
    "metadata": {},
    "outputs": [
@@ -484,7 +572,7 @@
        "915          9253.184248  1790.465304            True  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce689b50",
+   "id": "3b93da5f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -516,15 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd13d18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbe32ce3",
+   "id": "afd31379",
    "metadata": {},
    "outputs": [],
    "source": []
